trying to fix the navbar on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 #main {
   padding: 55px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  text-align: center;
 }
 
 .border-top { border-top: 1px solid #e5e5e5; }
